--- a/README
+++ b/README
@@ -1,1 +1,4 @@
-C'est Windovvs ici (bureau, bontton, appli, heure, tout ça...)
+C'est Windovvs ici (bureau, bonton, appli, heure, tout ça...)
+Codé sur pyzo 4.12.8. Python 3.8.8 on Windows (64 bits).
+
+Besoin de requirements.txt
